# aiovisor

./: README.md  pyproject.toml  setup.cfg  setup.py
aiovisor/: client.py  config.py  core.py  daemonize.py  server.py  util.py
aiovisor/server/: cli.py  config.py  core.py  process.py  web.py
aiovisor/server/static/: index.html
aiovisor/server/statics/: index.html
src/aiovisor/: client.py  daemonize.py  util.py
src/aiovisor/server/: cli.py  config.py  core.py  process.py  web.py
src/aiovisor/server/web/: api.py  app.py
src/aiovisor/server/web/static/: api.html  datastar.js  index.html  style.css
tests/: c1.json  c1.py  c1.toml  c1.yaml  test_config.py
