[project]
name = "aiovisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose Tiago Macara Coutinho", email = "tiago.coutinho@crunch.io" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "blinker>=1.9.0",
    "psutil>=7.1.3",
    
]

[project.scripts]
aiovisor = "aiovisor:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pyyaml>=6.0.3",
]
yaml = [
    "pyyaml>=6.0.3",
]
